--- a/war/css/app.css
+++ b/war/css/app.css
@@ -195,24 +195,64 @@ dl dd {
   font-size: 11px;
 }
 
-#scheadule-days {
-  list-style: none;
-  display: block;
-  overflow: hidden;
-  margin-top: 10px;
-  margin-left: 15px;
+#scheaduler {
+  margin-top: 15px;
+  padding: 15px;
+  background-color: #f5f5f5;
+  border: 1px solid #e5e5e5;
 }
-#scheadule-days li {
+#scheaduler ul {
+  list-style: none;
+  overflow: hidden;
+  margin-top: 0px;
+  margin-left: 0px;
+  margin-right: 10px;
+  display: inline;
+  float: left;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.07451) 0px 1px 1px 0px inset;
+  background-color: white;
+  border-bottom-color: #cccccc;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  border-left-color: #cccccc;
+  border-left-style: solid;
+  border-left-width: 1px;
+  border-right-color: #cccccc;
+  border-right-style: solid;
+  border-right-width: 1px;
+  border-top-color: #cccccc;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  border-top-style: solid;
+  border-top-width: 1px;
+  box-shadow: rgba(0, 0, 0, 0.07451) 0px 1px 1px 0px inset;
+  box-sizing: border-box;
+  color: #555555;
+  height: 30px;
+  line-height: 20px;
+  min-height: 30px;
+  padding-bottom: 4px;
+  padding-left: 10px;
+  padding-right: 0px;
+  padding-top: 4px;
+  vertical-align: middle;
+}
+#scheaduler ul li {
   display: inline;
   float: left;
   margin-right: 15px;
 }
-#scheadule-days li label {
+#scheaduler ul li label {
   font-weight: normal;
-  font-size: 12px;
+  font-size: 11px;
 }
-#scheadule-days li input[type=checkbox] {
+#scheaduler ul li input[type=checkbox] {
   margin-top: -3px;
+}
+#scheaduler ul li i.icon-calendar {
+  margin-right: -6px;
 }
 
 /**
