--- a/sass/app/_styles.scss
+++ b/sass/app/_styles.scss
@@ -234,56 +234,47 @@ dl {
   background-color: #f5f5f5;
   border: 1px solid #e5e5e5;
 
+  header {
+    h4 {
+      display: inline;
+    }
+
+    div.pull-right {
+      button {
+        margin-left: 10px;
+      }
+    }
+  }
+
+  .scheadule {
+    overflow: hidden;
+    margin-bottom: 5px;
+  }
+
+  .timer {
+    float: left;
+    display: inline;
+    margin-right: 10px;  
+  }
+
   ul {
     list-style: none;
     overflow: hidden;
-    margin-top: 0px;
-    margin-left: 0px;
-    margin-right: 10px;
-
+    margin: 0 10px 0 0;
+    padding: 4px 0 4px 10px;
     display: inline;
     float: left;
-
-    -webkit-box-shadow: rgba(0, 0, 0, 0.0745098) 0px 1px 1px 0px inset;
-
     background-color: white;
-
-    border-bottom-color: rgb(204, 204, 204);
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-bottom-style: solid;
-    border-bottom-width: 1px;
-    border-left-color: rgb(204, 204, 204);
-    border-left-style: solid;
-    border-left-width: 1px;
-    border-right-color: rgb(204, 204, 204);
-    border-right-style: solid;
-    border-right-width: 1px;
-    border-top-color: rgb(204, 204, 204);
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
-    border-top-style: solid;
-    border-top-width: 1px;
+    border: 1px solid rgb(204, 204, 204);
+    border-radius: 4px;
+    -webkit-box-shadow: rgba(0, 0, 0, 0.0745098) 0px 1px 1px 0px inset;
     box-shadow: rgba(0, 0, 0, 0.0745098) 0px 1px 1px 0px inset;
     box-sizing: border-box;
     color: rgb(85, 85, 85);
-
-    // cursor: auto;
-
-    // display: inline-block;
-
     height: 30px;
     line-height: 20px;
     min-height: 30px;
-    padding-bottom: 4px;
-    padding-left: 10px;
-    padding-right: 0px;
-    padding-top: 4px;
     vertical-align: middle;
-
-
-
-
 
     li {
       display: inline;
@@ -302,9 +293,8 @@ dl {
     }
   }
 
-  button[type=button] {
-    // display: inline;
-    // float: left;
+  button.btn-danger {
+    margin-top: 2px;
   }
 }
 
