--- a/war/css/app.css
+++ b/war/css/app.css
@@ -201,42 +201,38 @@ dl dd {
   background-color: #f5f5f5;
   border: 1px solid #e5e5e5;
 }
+#scheaduler header h4 {
+  display: inline;
+}
+#scheaduler header div.pull-right button {
+  margin-left: 10px;
+}
+#scheaduler .scheadule {
+  overflow: hidden;
+  margin-bottom: 5px;
+}
+#scheaduler .timer {
+  float: left;
+  display: inline;
+  margin-right: 10px;
+}
 #scheaduler ul {
   list-style: none;
   overflow: hidden;
-  margin-top: 0px;
-  margin-left: 0px;
-  margin-right: 10px;
+  margin: 0 10px 0 0;
+  padding: 4px 0 4px 10px;
   display: inline;
   float: left;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.07451) 0px 1px 1px 0px inset;
   background-color: white;
-  border-bottom-color: #cccccc;
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
-  border-bottom-style: solid;
-  border-bottom-width: 1px;
-  border-left-color: #cccccc;
-  border-left-style: solid;
-  border-left-width: 1px;
-  border-right-color: #cccccc;
-  border-right-style: solid;
-  border-right-width: 1px;
-  border-top-color: #cccccc;
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
-  border-top-style: solid;
-  border-top-width: 1px;
+  border: 1px solid #cccccc;
+  border-radius: 4px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.07451) 0px 1px 1px 0px inset;
   box-shadow: rgba(0, 0, 0, 0.07451) 0px 1px 1px 0px inset;
   box-sizing: border-box;
   color: #555555;
   height: 30px;
   line-height: 20px;
   min-height: 30px;
-  padding-bottom: 4px;
-  padding-left: 10px;
-  padding-right: 0px;
-  padding-top: 4px;
   vertical-align: middle;
 }
 #scheaduler ul li {
@@ -253,6 +249,9 @@ dl dd {
 }
 #scheaduler ul li i.icon-calendar {
   margin-right: -6px;
+}
+#scheaduler button.btn-danger {
+  margin-top: 2px;
 }
 
 /**
