--- a/war/js/views/messages.html
+++ b/war/js/views/messages.html
@@ -99,6 +99,7 @@
         <form>
           <fieldset>
 
+            <!-- broadcasting types -->
             <div class="control-group">
               <label class="control-label">{{ui.message.broadcast}}</label>
               <div  class="btn-group"  
@@ -117,7 +118,9 @@
                         bs-button="">{{ui.message.email}}</button>
               </div>
             </div>
+            <!-- end broadcasting types -->
 
+            <!-- receivers -->
             <div class="control-group">
               <label class="control-label">{{ui.message.receviers}}</label>
               <!-- {{ui.message.chooseRecept}} -->
@@ -131,7 +134,9 @@
               </select>
               <!-- <p ng-repeat="receiver in message.receivers"><strong>{{receiver.id}}</strong></p> -->
             </div>
+            <!-- end receivers -->
 
+            <!-- subject -->
             <div class="control-group">
               <label class="control-label">{{ui.message.subject}}</label>
               <input type="text" 
@@ -139,17 +144,18 @@
                       ng-model="message.subject"
                       placeholder="{{ui.message.typeSubject}}">
             </div>
+            <!-- end subject -->
 
+            <!-- message -->
             <div class="control-group">
               <label class="control-label">{{ui.message.message}}</label>
               <textarea rows="7" 
                         class="span7"
                         ng-model="message.body"></textarea>
             </div>
+            <!-- end subject -->
 
-
-
-
+            <!-- scheaduler toggle -->
             <div class="control-group" ng-hide="scheaduler">
               <label class="control-label">Scheaduling</label>
               <div  class="btn-group"  
@@ -162,22 +168,24 @@
                         bs-button="">Turn On</button>
               </div>
             </div>
+            <!-- end scheaduler toggle -->
 
-
-
+            <!-- scheaduler -->
             <section id="scheaduler" ng-show="scheaduler">
 
+              <!-- scheaduler header -->
               <header>
                 <h4>Scheadules</h4>
-
                 <div class="pull-right">
                   <button type="button" class="btn btn-small" ng-click="scheaduler = false">Turn Off</button>
                   <button type="button" class="btn btn-small btn-success" ng-click="addNewOffset()">Add New</button>
                 </div>
-                
               </header>
+              <!-- end scheaduler header -->
+
               <hr>
 
+              <!-- scheaduler title -->
               <div class="control-group">
                 <label class="control-label">Scheadule title</label>
                 <input type="text" 
@@ -185,36 +193,46 @@
                       ng-model="scheadule.title"
                       placeholder="Scheadule title">
               </div>
+              <!-- end scheaduler title -->
 
+              <!-- no scheadulers -->
               <div class="control-group" ng-hide="scheaduleCount > 0">
                 <label class="control-label">Scheadules</label>
                 <p class="muted"><small><i>There are no scheaduled tasks.</i></small></p>
               </div>
+              <!-- end no scheadulers -->
 
+              <!-- scheadulars list -->
               <div class="control-group" ng-show="scheaduleCount > 0">
                 <label class="control-label">Scheadules</label>
                 <!-- <span style="font-size:11px" ng-repeat="o in offsets">{{o}}<br></span> -->
                 <scheadule-item ng-repeat="offset in offsets" scheadule="offset" remover="remover()"></scheadule-item>
               </div>
-              
+              <!-- end scheadulars list -->              
 
             </section>
+            <!-- end scheaduler -->
 
-
-
+            <!-- compose form actions -->
             <div class="form-actions">
+
               <button type="submit" 
                       ng-click="send(message, broadcast)" 
                       ng-show="scheaduler"
                       class="btn btn-success">Save</button>
+
               <button type="submit" 
                       ng-hide="scheaduler" 
                       ng-click="send(message, broadcast)" 
                       class="btn btn-success">{{ui.message.sendMessage}}</button>
+                      
             </div>
+            <!-- end compose form actions -->
+
           </fieldset>
         </form>
         <!-- end compose form -->
+
       </div>
       <!-- end composeTab -->
 
