--- a/war/css/app.css
+++ b/war/css/app.css
@@ -195,28 +195,28 @@ dl dd {
   font-size: 11px;
 }
 
-#scheaduler {
+#scheaduler-pane {
   margin-top: 15px;
   padding: 15px;
   background-color: #f5f5f5;
   border: 1px solid #e5e5e5;
 }
-#scheaduler header h4 {
+#scheaduler-pane header h4 {
   display: inline;
 }
-#scheaduler header div.pull-right button {
+#scheaduler-pane header div.pull-right button {
   margin-left: 10px;
 }
-#scheaduler .scheadule {
+#scheaduler-pane .scheadule {
   overflow: hidden;
   margin-bottom: 5px;
 }
-#scheaduler .timer {
+#scheaduler-pane .timer {
   float: left;
   display: inline;
   margin-right: 10px;
 }
-#scheaduler ul {
+#scheaduler-pane ul {
   list-style: none;
   overflow: hidden;
   margin: 0 10px 0 0;
@@ -235,22 +235,22 @@ dl dd {
   min-height: 30px;
   vertical-align: middle;
 }
-#scheaduler ul li {
+#scheaduler-pane ul li {
   display: inline;
   float: left;
   margin-right: 15px;
 }
-#scheaduler ul li label {
+#scheaduler-pane ul li label {
   font-weight: normal;
   font-size: 11px;
 }
-#scheaduler ul li input[type=checkbox] {
+#scheaduler-pane ul li input[type=checkbox] {
   margin-top: -3px;
 }
-#scheaduler ul li i.icon-calendar {
+#scheaduler-pane ul li i.icon-calendar {
   margin-right: -6px;
 }
-#scheaduler button.btn-danger {
+#scheaduler-pane button.btn-danger {
   margin-top: 2px;
 }
 
