--- a/war/js/views/messages.html
+++ b/war/js/views/messages.html
@@ -98,8 +98,7 @@
 
             <span ng-hide="views.scheaduler">{{ui.message.composeMessage}}</span>
 
-            <span ng-show="views.scheaduler">{{notification.label | toTitleCase}}</span>
-            <!-- <span ng-show="views.scheaduler">{{notification.label}}</span> -->
+            <span ng-show="views.scheaduler">{{scheaduled.title | toTitleCase}}</span>
 
           </h3>
 
@@ -111,7 +110,7 @@
         <hr>
 
         <!-- compose form -->
-        <form>
+        <form ng-controller="scheaduler">
           <fieldset>
 
             <!-- broadcasting types -->
@@ -176,8 +175,8 @@
             </div>
             <!-- end subject -->
 
-            <!-- scheaduler toggle -->
-            <div class="control-group" ng-hide="scheaduler">
+            <!-- scheadulerPane toggle -->
+            <div class="control-group" ng-hide="scheadulerPane">
               <label class="control-label">Scheaduling</label>
 
               <div  class="btn-group"  
@@ -186,8 +185,8 @@
 
                 <button type="button" 
                         class="btn btn-small" 
-                        ng-model="scheaduler" 
-                        ng-click="scheaduler == !scheaduler"
+                        ng-model="scheadulerPane" 
+                        ng-click="scheadulerPane == !scheadulerPane"
                         bs-button="">Turn On</button>
 
               </div>
@@ -195,13 +194,13 @@
             <!-- end scheaduler toggle -->
 
             <!-- scheaduler -->
-            <section id="scheaduler-pane" ng-show="scheaduler" ng-controller="scheaduler">
+            <section id="scheaduler-pane" ng-show="scheadulerPane">
 
               <!-- scheaduler header -->
               <header>
                 <h4>Scheadules</h4>
                 <div class="pull-right">
-                  <button type="button" class="btn btn-small" ng-click="scheaduler = false" ng-hide="views.scheaduler">Turn Off</button>
+                  <button type="button" class="btn btn-small" ng-click="scheadulerPane = false" ng-hide="views.scheaduler">Turn Off</button>
                   <button type="button" class="btn btn-small btn-success" ng-click="addNewOffset()">Add New</button>
                 </div>
               </header>
@@ -209,66 +208,63 @@
 
               <hr>
 
-              <!-- scheaduler title -->
+              <!-- notification title -->
               <div class="control-group">
-                <label class="control-label">Scheadule title</label>
+                <label class="control-label">Notification title</label>
 
                 <input type="text" 
                       class="span6"
-                      ng-model="scheadule.title"
-                      placeholder="Scheadule title">
+                      ng-model="scheaduled.title"
+                      placeholder="Notification title">
 
               </div>
-              <!-- end scheaduler title -->
+              <!-- end notification title -->
 
-              <!-- {{scheaduleCount}} -->
-
-              <!-- no scheadulers -->
-              <!-- <div class="control-group" ng-hide="scheaduleCount > 0">
-                <label class="control-label">Scheadules</label>
+              <!-- no notifications -->
+              <div class="control-group" ng-hide="scheaduleCount > 0">
+                <label class="control-label">Notifications</label>
                 <p class="muted"><small><i>There are no scheaduled tasks.</i></small></p>
-              </div> -->
-              <!-- end no scheadulers -->
+              </div>
+              <!-- end no notifications -->
 
-              <!-- scheadulars list -->
-              <!-- <div class="control-group" ng-show="scheaduleCount > 0"> -->
-              <div class="control-group">
-                <label class="control-label">Scheadules</label>
+              <!-- notifications list -->
+              <div class="control-group" ng-show="scheaduleCount > 0">
+                <label class="control-label">Notifications</label>
 
                 <!-- <span style="font-size:11px" ng-repeat="o in offsets"> {{o}}<br></span> -->
 
-                <!-- scheadular items -->
-                <scheadule-item ng-repeat="offset in offsets" scheadule="offset" remover="remover()"></scheadule-item>
-                <!-- end scheadular items -->
+                <!-- notification items -->
+                <notification-item ng-repeat="offset in scheaduled.offsets" scheadule="offset" remover="remover()"></notification-item>
+                <!-- end notification items -->
 
               </div>
-              <!-- end scheadulars list -->
+              <!-- end notifications list -->
 
               <!-- scheaduler status -->
               <div class="control-group">
-                <label class="control-label">Scheadule status</label>
+                <label class="control-label">Notification status</label>
                 
                 <!-- status toggler -->
                 <div  class="btn-group" 
                       data-toggle="buttons-radio">
 
                   <button type="button" 
-                          class="btn btn-small {{(scheadule.status) && 'active'}}" 
-                          ng-model="scheadule.status" 
-                          ng-click="scheadule.status = true">On</button>
+                          class="btn btn-small {{(scheaduled.status) && 'active'}}" 
+                          ng-model="scheaduled.status" 
+                          ng-click="scheaduled.status = true">On</button>
 
                   <button type="button" 
-                          class="btn btn-small {{(!scheadule.status) && 'active'}}" 
-                          ng-model="scheadule.status" 
-                          ng-click="scheadule.status = false">Off</button>
+                          class="btn btn-small {{(!scheaduled.status) && 'active'}}" 
+                          ng-model="scheaduled.status" 
+                          ng-click="scheaduled.status = false">Off</button>
 
                 </div>
                 <!-- end status toggler -->
 
                 <!-- status indicator -->
                 <div style="margin-left: 10px; display: inline;">
-                  <span class="label label-success" ng-show="scheadule.status">Running</span>
-                  <span class="label" ng-hide="scheadule.status">Stopped</span>
+                  <span class="label label-success" ng-show="scheaduled.status">Enabled</span>
+                  <span class="label" ng-hide="scheaduled.status">Disabled</span>
                 </div>
                 <!-- end status indicator -->
 
@@ -282,13 +278,13 @@
             <div class="form-actions">
 
               <!-- scheadular action buttons -->
-              <div ng-show="scheaduler">
+              <div ng-show="scheadulerPane">
                 <button type="submit" 
                         ng-hide="scheaduleCount > 0"
                         class="btn btn-success disabled">Save</button>
 
                 <button type="submit" 
-                        ng-click="send(message, broadcast)" 
+                        ng-click="scheaduler.save(message, broadcast, scheaduled)" 
                         ng-show="scheaduleCount > 0"
                         class="btn btn-success">Save</button>
               </div>
@@ -296,7 +292,7 @@
 
               <!-- message action buttons -->
               <button type="submit" 
-                      ng-hide="scheaduler" 
+                      ng-hide="scheadulerPane" 
                       ng-click="send(message, broadcast)" 
                       class="btn btn-success">{{ui.message.sendMessage}}</button>
               <!-- end message action buttons -->
@@ -592,10 +588,10 @@
 
         <hr>
 
-        <p ng-hide="notifications.length > 0">There are no notifications.</p>
+        <p ng-hide="scheadules.length > 0">There are no notifications.</p>
         
         <!-- notifications listing -->
-        <div ng-show="notifications.length > 0">
+        <div ng-show="scheadules.length > 0">
           <table class="table table-striped">
             <thead>
               <tr>
@@ -606,19 +602,19 @@
               </tr>
             </thead>
             <tbody>
-              <tr ng-repeat="notification in notifications">
+              <tr ng-repeat="scheadule in scheadules">
                 <td>
-                  <span class="label label-success" ng-show="notification.active">Running</span>
-                  <span class="label" ng-hide="notification.active">Stopped</span>
+                  <span class="label label-success" ng-show="scheadule.active">Enabled</span>
+                  <span class="label" ng-hide="scheadule.active">Disabled</span>
                 </td>
-                <td><a ng-click="requestNotification(notification.uuid)">{{notification.label}}</a></td>
-                <td>{{notification.offsets}}</td>
+                <td><a ng-click="requestNotification(scheadule.uuid)">{{scheadule.label}}</a></td>
+                <td>{{scheadule.offsets}}</td>
                 <td>
                   <div class="pull-right">
                     <button class="btn btn-mini"
-                            ng-click="editNotification(notification.uuid)"><i class="icon-edit"></i></button>&nbsp;
+                            ng-click="requestNotification(scheadule.uuid)"><i class="icon-edit"></i></button>&nbsp;
                     <button type="submit" 
-                            ng-click="removeNotification(notification.uuid)" 
+                            ng-click="scheaduler.remove(scheadule.uuid)" 
                             class="btn btn-danger btn-mini"><i class="icon-trash icon-white"></i></button>
                   </div>
                 </td>
@@ -627,7 +623,7 @@
           </table>
 
           <span class="muted pull-right">
-            <small><i>In totaal: {{notifications.length}} </i></small>
+            <small><i>In totaal: {{scheadules.length}} </i></small>
           </span>
 
         </div>
