--- a/war/js/views/messages.html
+++ b/war/js/views/messages.html
@@ -599,8 +599,9 @@
                 <th width="60"><!-- Status --></th>
                 <th width="50"><!-- Types --></th>
                 <th>Label</th>
+                <th>Audience</th>
                 <th>Frequency</th>
-                <th></th>
+                <th width="60"></th>
               </tr>
             </thead>
             <tbody>
@@ -614,6 +615,7 @@
                   <div><span class="entypo mail" ng-show="scheadule.mail">&#128319;</span></div>
                 </td>
                 <td><a ng-click="requestNotification(scheadule.uuid)">{{scheadule.label}}</a></td>
+                <td><span class="muted"><small><i>{{scheadule.recipients | nicelyAudience}}</i></small></span></td>
                 <td><span ng-bind-html-unsafe="scheadule.offsets | nicelyOffsets"></span></td>
                 <td>
                   <div class="pull-right">
