icon fonts are hidden for ie8 & quick fix for tab-content balance

--- a/sass/app/_dashboard.scss
+++ b/sass/app/_dashboard.scss
@@ -300,6 +300,8 @@
 
           .remove {
             font-size: 0;
+            // display: none;
+            text-indent: -9999px;
           }
 
           .shortages {
