--- a/war/js/views/dashboard.html
+++ b/war/js/views/dashboard.html
@@ -117,7 +117,7 @@
                 </div>
               </div>
 
-              <span class="remove">{{shortageHolders['shortages-' + pie.id]}}</span>
+              <!-- <span class="remove">{{shortageHolders['shortages-' + pie.id]}}</span> -->
 
               <div id="shortages-{{pie.id}}" 
                     class="shortages span12" 
