--- a/war/js/views/profile.html
+++ b/war/js/views/profile.html
@@ -119,7 +119,7 @@
             <div class="controls">
               <input  type="text" 
                       class="span4" 
-                      ng-model="profile.name"
+                      ng-model="profilemeta.name"
                       value="{{data.resources.name}}">
             </div>
           </div>
@@ -128,7 +128,7 @@
             <div class="controls">
               <input  type="text" 
                       class="span4" 
-                      ng-model="profile.EmailAddress"
+                      ng-model="profilemeta.EmailAddress"
                       value="{{data.resources.EmailAddress}}">
             </div>
           </div>
@@ -137,7 +137,7 @@
             <div class="controls">
               <input  type="text" 
                       class="span3" 
-                      ng-model="profile.PhoneAddress"
+                      ng-model="profilemeta.PhoneAddress"
                       value="{{data.resources.PhoneAddress}}">
             </div>
           </div>
@@ -146,7 +146,7 @@
             <div class="controls">
               <input  type="text" 
                       class="span5" 
-                      ng-model="profile.PostAddress"
+                      ng-model="profilemeta.PostAddress"
                       value="{{data.resources.PostAddress}}">
             </div>
           </div>
@@ -155,7 +155,7 @@
             <div class="controls">
               <input  type="text" 
                       class="span2" 
-                      ng-model="profile.PostZip"
+                      ng-model="profilemeta.PostZip"
                       value="{{data.resources.PostZip}}">
             </div>
           </div>
@@ -164,14 +164,14 @@
             <div class="controls">
               <input  type="text" 
                       class="span3" 
-                      ng-model="profile.PostCity"
+                      ng-model="profilemeta.PostCity"
                       value="{{data.resources.PostCity}}">
             </div>
           </div>
           <div class="form-actions">
             <button   type="submit" 
                       class="btn btn-success"
-                      ng-click="save(profile)">{{ui.profile.saveProfile}}</button>
+                      ng-click="save(profilemeta)">{{ui.profile.saveProfile}}</button>
           </div>
         </form>
         <!-- end edit profile form -->
